--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Zoom</string>
+    <string name="app_name">My Zooms</string>
     <string name="open_zoom">Open Zoom Meeting</string>
     <string name="meeting_title">Meeting Title</string>
 </resources>
